# fastapi

./: .coverage  README.md  database.db  pyproject.toml
fastapi_zero/: app.py  models.py  schemas.py  security.py  settings.py
migrations/: env.py
migrations/versions/: aefac00032fe_create_users_table.py
tests/: conftest.py  conftests.py  test_app.py  test_db.py  test_security.py
